manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker-service
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/reflect"
    alb.ingress.kubernetes.io/healthcheck-port: "traffic-port"
spec:
  selector:
    app: worker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
